--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
   <link rel="stylesheet" href="src/css/style.css" />
 </head>
 <body style="margin:0;padding:0">
-    <audio hidden loop>
+    <audio hidden autoplay loop>
         <source src="static/music/maher-zain.mp3" type="audio/mpeg">
         <source src="static/music/maher-zain.ogg" type="audio/ogg">
         Your browser does not support the audio element.
