--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index,follow">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" href="static/favicon/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" href="public/static/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <meta name="description" content="Undangan Pernikahan Fulan & Fulanah">
   <meta name="keywords" content="kodiundang, undangan, digital, gratis">
@@ -28,32 +28,32 @@
   <meta property="fb:app_id" content="650865716565121">
   <meta name="twitter:site" content="@kodiundang">
   <!--  Manifest Website  -->
-  <link rel="apple-touch-icon" sizes="72x72" href="static/favicon/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="static/favicon/apple-icon-144x144.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="static/favicon/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="static/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="static/favicon/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="120x120" href="static/favicon/favicon-120x120.png">
-  <link rel="icon" type="image/png" sizes="192x192" href="static/favicon/android-icon-192x192.png">
-  <link rel="manifest" href="static/favicon/manifest.json">
-  <link rel="stylesheet" href="src/css/style.css" />
+  <link rel="apple-touch-icon" sizes="72x72" href="public/static/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="public/static/favicon/apple-icon-144x144.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="public/static/favicon/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="public/static/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="public/static/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="120x120" href="public/static/favicon/favicon-120x120.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="public/static/favicon/android-icon-192x192.png">
+  <link rel="manifest" href="public/static/favicon/manifest.json">
+  <link rel="stylesheet" href="public/src/css/style.css" />
 </head>
 <body style="margin:0;padding:0">
-    <audio hidden autoplay loop>
-        <source src="static/music/maher-zain.mp3" type="audio/mpeg">
-        <source src="static/music/maher-zain.ogg" type="audio/ogg">
-        Your browser does not support the audio element.
-    </audio>
   <aside style="background-color: var(--logo-clr);">
     <div style="text-align: center;padding-top: 15px;padding-bottom: 15px;">
       <span class="font-custom" style="color: var(--bg-header);font-family: 'Segoe UI';">🎉 <b>This Template</b> is available on <b>GitHub</b> 🎉
         <a href="https://github.com/heriswn/index" target="_blank" rel="noopener noreferrer" style="color: var(--logo-clr);background-color: var(--bg-header);border-radius: 4px;padding: 4px 8px;">Get It NOW</a></span>
     </div>
   </aside>
+  <audio hidden controls autoplay loop>
+    <source src="public/static/music/maher-zain.mp3" type="audio/mpeg">
+    <source src="public/static/music/maher-zain.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
   <header id="top"
     style='width: 100%; display: flex;justify-content: center;background-color: var(--bg-header);border-bottom: 1.5px solid var(--border-s);'>
     <div class="screenResponsive" style="margin-top: 25px;margin-bottom: 25px">
-      <img src="static/images/invite.png" alt="profile" height="100" width="100">
+      <img src="public/static/images/invite.png" alt="profile" height="100" width="100">
       <div style="text-align: center;margin-left: 20px;">
         <br>
         <span
@@ -77,7 +77,7 @@
         <h2>Profile</h2>
         <div style="display: flex;justify-content: space-between;">
             <div style="display: block; text-align: center;">
-                <img src="static/images/female.png" alt="profile" height="100" width="100">
+                <img src="public/static/images/female.png" alt="profile" height="100" width="100">
                 <div style="text-align: center;">
                     <span
                         style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulanah</span>
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div style="display: block; text-align: center;">
-                <img src="static/images/male.png" alt="profile" height="100" width="100">
+                <img src="public/static/images/male.png" alt="profile" height="100" width="100">
                 <div style="text-align: center;">
                     <span
                         style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulan</span>
@@ -236,5 +236,5 @@
     </div>
   </footer>
 </body>
-<script src="src/js/time-count.js"></script>
+<script src="public/src/js/time-count.js"></script>
 </html>
