--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="https://github.com/heriswn/index" target="_blank" rel="noopener noreferrer" style="color: var(--logo-clr);background-color: var(--bg-header);border-radius: 4px;padding: 4px 8px;">Get It NOW</a></span>
     </div>
   </aside>
-  <audio hidden controls autoplay loop>
+  <audio hidden autoplay loop>
     <source src="public/static/music/maher-zain.mp3" type="audio/mpeg">
     <source src="public/static/music/maher-zain.ogg" type="audio/ogg">
     Your browser does not support the audio element.
