--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Undangan Pernikahan Fulan & Fulanah | Kodiundang</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="robots" content="noindex">
+  <meta name="robots" content="noindex, nofollow">
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" href="public/static/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
