--- a/index.html
+++ b/index.html
@@ -52,18 +52,22 @@
   </audio>
   <header id="top"
     style='width: 100%; display: flex;justify-content: center;background-color: var(--bg-header);border-bottom: 1.5px solid var(--border-s);'>
-    <div class="screenResponsive" style="margin-top: 25px;margin-bottom: 25px">
+    <div class="screenResponsive" style=" margin-top: 25px;margin-bottom: 25px">
       <img src="public/static/images/invite.png" alt="profile" height="100" width="100">
       <div style="text-align: center;margin-left: 20px;">
         <br>
         <span
-          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:28px;font-weight: 400;'>Undangan Pernikahan</span>
+          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:18px;font-weight: 400;'>PERNIKAHAN</span>
         <div
-          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:18px;font-weight: 400; padding-top:5px;'>
+          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:28px;font-weight: 400; padding-top:5px;'>
           Fulan & Fulanah
         </div>
         <div
-          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:14px;font-weight: 400; padding-top:5px;'>
+          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:12px;font-weight: 400;'>
+          <p id="demo" style="justify-content: space-between;"></p>
+        </div>
+        <div
+          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:12px;font-weight: 400;'>
           Jum'at, 01 January 2023 | 13:00 - 16:00 WIB
         </div>
       </div>
@@ -73,72 +77,65 @@
   <main style="display: flex;justify-content: center;margin-bottom: 20px;">
     <article style='width: 600px;padding: 8px; font-family:Arial; font-size: 13px;'>
     <h1>Yang Sedang Berbahagia</h1>
-      <section style="margin-top: 60px; margin-bottom: 60px;">
+      <section class="reveal" style="margin-top: 60px; margin-bottom: 60px;">
         <h2>Profile</h2>
         <div style="display: flex;justify-content: space-between;">
-            <div style="display: block; text-align: center;">
-                <img src="public/static/images/female.png" alt="profile" height="100" width="100">
-                <div style="text-align: center;">
-                    <span
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulanah</span>
-                    <div
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
-                        Putri kedua dari Bapak Fulan & Ibu Fulanah
-                    </div>
-                    <div
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
-                        Instagram
-                    </div>
-                </div>
+          <div style="display: block; text-align: center;padding: 2%;">
+            <img src="public/static/images/female.png" alt="profile" height="100" width="100">
+            <div style="text-align: center;">
+              <span
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulanah</span>
+              <div
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
+                Putri kedua dari Bapak Fulan & Ibu Fulanah
+              </div>
+              <div
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
+                Instagram
+              </div>
             </div>
-            <div style="display: block; text-align: center;">
-                <img src="public/static/images/male.png" alt="profile" height="100" width="100">
-                <div style="text-align: center;">
-                    <span
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulan</span>
-                    <div
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
-                        Putra kedua dari Bapak Fulan & Ibu Fulanah
-                    </div>
-                    <div
-                        style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
-                        Instagram
-                    </div>
-                </div>
+          </div>
+          <div style="display: block; text-align: center;padding: 2%;">
+            <img src="public/static/images/male.png" alt="profile" height="100" width="100">
+            <div style="text-align: center;">
+              <span
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>Fulan</span>
+              <div
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
+                Putra kedua dari Bapak Fulan & Ibu Fulanah
+              </div>
+              <div
+                style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400; padding-top:5px;'>
+                Instagram
+              </div>
             </div>
+          </div>
         </div>
       </section>
-      <section style='margin-top: 60px; margin-bottom: 60px;text-align: left;'>
+      <section class="reveal" style='margin-top: 60px; margin-bottom: 60px;text-align: left;'>
         <h2>Sunnah</h2>
         <p>Every love story is beautiful, but ours is the best one. I loved her since the first time I saw her. My mother told me
         to pick the very best one, and I did. True love stories never have endings.</p>
       </section>
-      <section style='margin-top: 60px; margin-bottom: 60px;text-align: left;'>
-        <h2>Menghitung Hari</h2>
-        <p id="demo" style="justify-content: space-between;"></p>
-      </section>
-      <section style='text-align: left;'>
+      <section class="reveal" style='text-align: left;'>
         <h2>Lokasi</h2>
         <div>
           <p>Resepsi</p>
         </div>
       </section>
-      <section style='text-align: left;'>
+      <section class="reveal" style='text-align: left;'>
         <h2>Protokol kesehatan</h2>
         <p>Pastikan mengikuti Protokol kesehatan</p>
       </section>
-      <section style='text-align: left;'>
+      <section class="reveal" style='text-align: left;'>
         <h2>Amplop Digital</h2>
         <p>Kirim amplop digital.</p>
       </section>
-      <section style='text-align: left;'>
+      <section class="reveal" style='text-align: left;'>
         <h2>Pesan dan Absensi</h2>
         <p>Kirim Pesan dan konfirmasi kedatangan.</p>
       </section>
-      <div style='text-align:left;margin-bottom: 10px;'>
-        <a href="https://mobile.twitter.com/search?q=https://herisetiawan.vercel.app" target="_blank" rel="noopener noreferrer">[Discuss on Twitter]</a>
-      </div>
-      <div style='text-align:left;'>
+      <div class="reveal" style='text-align:left;'>
         <a href="#top" rel="noopener noreferrer">[Back to Top]</a>
       </div>
     </article>
