--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>
           Save The Date</h2>
       </div>
-      <div style="display: block;color: var(--bg-header);">
-        <div style="display: block; text-align: center;padding: 2%;background-color: #F1FAFF;border-radius: 8px;margin-bottom: 8px;">
+      <div style="display: block;">
+        <div style="display: block; text-align: center;padding: 2%;background-color: var(--bg-header);border-radius: 8px;margin-bottom: 8px;">
           <img src="public/static/images/akad-icon.png" alt="profile" height="100" width="100">
           <div style="text-align: center;">
             <span
@@ -141,7 +141,7 @@
             </div>
           </div>
         </div>
-        <div style="display: block; text-align: center;padding: 2%;background-color: #F1FAFF;border-radius: 8px;">
+        <div style="display: block; text-align: center;padding: 2%;background-color: var(--bg-header);border-radius: 8px;">
           <img src="public/static/images/resepsi-icon.png" alt="profile" height="100" width="100">
           <div style="text-align: center;">
             <span
@@ -204,10 +204,6 @@
           style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:12px;font-weight: 400;'>
           <span id="demo" style="justify-content: space-between;"></span>
         </div>
-        <div
-          style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:12px;font-weight: 400;'>
-          Jum'at, 01 January 2023 | 13:00 - 16:00 WIB
-        </div>
       </div>
     </div>
   </section>
@@ -216,9 +212,8 @@
       <div style="text-align: center; margin-bottom: 30px;">
         <h2
           style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-size:20px;font-weight: 400;'>
-          Wishes</h2>
-        <p style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400;'>Atas kehadiran dan do’a restu dari Bapak/Ibu/Saudara/i sekalian, kami mengucapkan Terima Kasih.
-        Wassalamualaikum Wr. Wb.</p>
+          Atas kehadiran dan do’a restu dari Bapak/Ibu/Saudara/i sekalian, kami mengucapkan Terima Kasih.
+          Wassalamualaikum Wr. Wb.</h2>
         <p style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400;'>Kami yang berbahagia.</p>
         <p style='font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;font-weight: 400;'>Fulanah & Fulan
         </p>
