--- a/index.html
+++ b/index.html
@@ -39,11 +39,7 @@
   <link rel="stylesheet" href="public/src/css/style.css" />
 </head>
 <body style="margin:0;padding:0">
-  <audio hidden autoplay loop>
-    <source src="public/static/music/maher-zain.mp3" type="audio/mpeg">
-    <source src="public/static/music/maher-zain.ogg" type="audio/ogg">
-    Your browser does not support the audio element.
-  </audio>
+  <audio src="public/static/music/maher-zain.mp3" autoplay></audio>
   <header class="fullscreenview" id="top"
     style='display: flex;justify-content: center;background-color: var(--bg-header);'>
     <div class="screenResponsive" >
